--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -8,9 +8,13 @@ body {
 	font: 12px/18px Arial, sans-serif;
 	height: 100%;
 }
+
+* {
+    box-sizing: border-box;
+}
+
 .wrapper {
 	min-width: 800px;
-	max-width: 1400px;
 	margin: 0 auto;
 	min-height: 100%;
 	height: auto !important;
@@ -21,7 +25,7 @@ body {
 /* Header
 -----------------------------------------------------------------------------*/
 .header {
-	height: 150px;
+	height: 100px;
 	background: #FFE680;
 }
 
@@ -38,10 +42,56 @@ body {
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
-	margin: -100px auto 0;
+	margin: -50px auto 0;
 	min-width: 800px;
-	max-width: 1400px;
-	height: 100px;
+	height: 50px;
 	background: #BFF08E;
 	position: relative;
+}
+
+.logoImg{
+    padding: 0;
+    position: relative;
+    width:75px;
+    height:75px;
+}
+
+.logoImg img{
+	margin: 10px;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    max-width:100%;
+    max-height: 100%;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+}
+
+.menu ul{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.menu ul li{
+	padding: 25px;
+	transition: 0.5s;
+
+}
+
+.menu ul li:hover{
+	background-color: white;
+	
+}
+
+.menu ul a{
+	color: black;
+	text-decoration: none;
+}
+
+.menu ul a i{
+	font-size: 50px;
 }
