--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -25,6 +25,9 @@ body {
 /* Header
 -----------------------------------------------------------------------------*/
 .header {
+	position:fixed;
+	width: 100%;
+	min-width: 800px;
 	height: 100px;
 	background: #FFE680;
 }
@@ -33,7 +36,7 @@ body {
 /* Middle
 -----------------------------------------------------------------------------*/
 .content {
-	padding: 0 0 100px;
+	padding: 100px 0 50px;
 }
 
 
@@ -50,14 +53,14 @@ body {
 }
 
 .logoImg{
+	margin: 10px;
     padding: 0;
     position: relative;
-    width:75px;
-    height:75px;
+    width:80px;
+    height:80px;
 }
 
-.logoImg img{
-	margin: 10px;
+.logoImg img{	
     position: absolute;
     left:50%;
     top:50%;
@@ -67,8 +70,13 @@ body {
 }
 
 .row {
+	height: 100%;
 	display: flex;
 	flex-direction: row;
+}
+
+.menu{
+	width: 100%;
 }
 
 .menu ul{
