--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 #startTest{
-	position: relative;
+	position: absolute;
 	top:70%;
 	left: 50%;
 	margin-left: -100px;
@@ -52,6 +52,7 @@ body {
 	width: 100%;
 	height: 600px;
 	background: green;
+	position: relative;
 }
 
 
