--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -51,6 +51,13 @@ body {
 	height: 50px;
 }
 
+.sliders{
+	position: absolute;
+	top:15%;
+	left: 50%;
+	margin-left: -250px;
+}
+
 .test{
 	width: 100%;
 	height: 600px;
