--- a/Sources/css/top-year.css
+++ b/Sources/css/top-year.css
@@ -15,12 +15,14 @@
   overflow-y: auto; }
 
 .timeline-detail-info {
+  height: 500px;
   margin: 10px;
   padding: 10px; }
 .film-name{
+  line-height: 1;
 	font: bold;
 	font-size: 40px;
-    text-align: center;
+  text-align: center;
 }
 .film-country{
 	font-size: 20px;
