--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -161,6 +161,14 @@ body {
 	text-align: center;
 	font-size: 40px; 
 }
+.titleGenre{
+	position: absolute;
+	top:5%;
+	left: 50%;
+	margin-left: -425px;
+	text-align: center;
+	font-size: 40px; 
+}
 
 .agesTitle{
 	position: absolute;
@@ -195,6 +203,12 @@ body {
 	width: 100%;
 	height: 800px;
 	background: #61c3ff;
+	position: relative;
+}
+.otherPages{
+	width: 100%;
+	height: 800px;
+	background: white;
 	position: relative;
 }
 .info{
@@ -297,6 +311,23 @@ body {
 	width: 200px;
 	font-size: 12px;
 }
+.showResultFilm{
+	width:900px;
+	margin: 0 auto;
+	font-size: 20px;
+}
+.filmTitle{
+	top:15px;
+	text-align:center;
+	font-size: 200%;
+	position: relative;
+}
+
+.otherInfo{
+	position: relative;
+	top:30px;
+	
+}
 
 .titleactor{
 	text-align:center;
@@ -340,8 +371,9 @@ body {
 	left:71px;
 }
 
-.likeDislike{
-	
+.footer{
+	font-size: 15px;
+	padding: 10px;
 }
 .userPicks{
 	position:relative;
