--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -41,6 +41,13 @@ body {
 .content {
 	padding: 100px 0 50px;
 }
+.calendar{
+	position: relative;
+	top:80px;
+	width: 800px; /* Ширина элемента в пикселах */
+	height: 800px;
+    margin: auto; /* Выравниваем по центру */
+}
 
 .startTest{
 	position: absolute;
@@ -207,7 +214,13 @@ body {
 }
 .otherPages{
 	width: 100%;
-	height: 800px;
+	height: 900px;
+	background: white;
+	position: relative;
+}
+.otherPagesSend{
+	width: 100%;
+	height: 1200px;
 	background: white;
 	position: relative;
 }
